Get autoprefixer working + align-items to stop stretching images in Safari

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ p {
 
 .resource-media {
     display: flex;
+    align-items: flex-start;
 }
 
 .resource-media__image {
